--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+    <link rel="icon" href="https://i.postimg.cc/R0qyjbwK/logo.png" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
+    <meta name="description" content="Technical Content Developer & Developer Advocate" />
+    <meta property="og:description" content="Technical Content Developer & Developer Advocate" />
+    <meta data-react-helmet="true" property="og:title" content="wolz CODElife® Official Portfolio">
+    <meta data-react-helmet="true" property="og:type" content="Website">
+    <meta data-react-helmet="true" property="og:url" content="https://wolzcodelfe.web.app">
+    <meta data-react-helmet="true" name="twitter:card" content="summary">
+    <meta data-react-helmet="true" name="twitter:description" content="Technical Content Developer & Developer Advocate">
+    <meta data-react-helmet="true" name="twitter:title" content="wolz CODElife® Official Portfolio">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/R0qyjbwK/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +30,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan&family=Montserrat&family=Permanent+Marker&display=swap" rel="stylesheet">
+    <title>wolz CODElife® Official Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
